knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Provider_Network_Relation__c/Contract_Provider_Network_Relation__c.object-meta.xml
<CustomObject>
    <label>Contract Provider Network Relation</label>
    <nameField>
        <displayFormat>CPNC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Provider Network Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>