knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Provider_Network_Relation__c/fields/Contract_Agreement_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement_Category__c</fullName>
    <formula>TEXT(Provider_Network_Contract__r.Contract.Agreement_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract_Agreement_Category</label>
    <type>Text</type>
</CustomField>