knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Provider_Network_Relation__c/fields/Contract_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Contract_StartDate__c</fullName>
    <formula>Provider_Network_Contract__r.Contract.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract_StartDate</label>
    <type>Date</type>
</CustomField>