knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Provider_Network_Relation__c/fields/Parent_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_Id__c</fullName>
    <formula>CASESAFEID(Contract__r.ParentContract.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Contract Id</label>
    <type>Text</type>
</CustomField>