knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Provider_Network_Relation__c/fields/Provider_Network_Contract__c.field-meta.xml
<CustomField>
    <fullName>Provider_Network_Contract__c</fullName>
    <label>Provider Network Contract</label>
    <referenceTo>ProviderNetworkContract</referenceTo>
    <relationshipLabel>Contract Provider Network Relations</relationshipLabel>
    <relationshipName>Contract_Provider_Network_Relations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>