knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Provider_Network_Relation__c/fields/Service_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Id__c</fullName>
    <formula>CASESAFEID( Provider_Network_Contract__r.Service_Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Account Id</label>
    <type>Text</type>
</CustomField>