knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Provider_Network_Relation__c/fields/SourceOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>SourceOpportunityId__c</fullName>
    <formula>CASESAFEID(Provider_Network_Contract__r.Contract.SourceOpportunity.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SourceOpportunityId</label>
    <type>Text</type>
</CustomField>